# HyperspaceExplorer

./: .cdtbuild  .cdtbuild_20backup  .cdtbuild_21backup  .cdtproject  .cproject  .gitignore  .gitlab-ci.yml  .project  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.bak  HyperspaceExplorer.kdev4  HyperspaceExplorer.kdevelop  HyperspaceExplorer.kdevelop.pcs  HyperspaceExplorer.kdevses  HyperspaceExplorer.pro  HyperspaceExplorer.tag  INSTALL  Makefile  Makefile.am  Makefile.in  MengerSponge.4d  README  README.md  TO-DO  TO-DO.md  TODO  _formulas.dvi  acinclude.m4  aclocal.m4  argvtest.C  bla.C  bootstrap.sh  buh.C  config.status  configure  configure.ac  main.cpp  (+3 more)
src/: .StdAfx.C.swp  4DMenu.C  4DView.C  4DView.H  Color.H  Color.h  ColorManager.C  ColorManager.H  ColorManager.h  ComplexDialog.C  ComplexDialog.H  ComplexDialog.ui.3  ComplexDialogImpl.C  ComplexDialogImpl.H  ComplexFunction.C  ComplexFunction.H  CustomFunction.C  CustomFunction.H  DefaultHeader  Function.C  Function.H  FunctionDialog.C  FunctionDialog.H  FunctionDialog.ui  FunctionDialogImpl.C  FunctionDialogImpl.H  Functions.pro  GLObject.H  Globals.C  Globals.H  Globals.h  Help.C  Help.H  Help.h  HyperspaceExplorer.pro  Light.C  Light.H  Light.h  Log.C  Log.H  (+50 more)
src/Balls/: Ball.H  Balls.C  BallsUI.C  BallsUI.H  BallsUI.ui  BallsUIImpl.H  Box.H  BoxWidget.H  MakeBox.C  Makefile  Matrix.h  Vec.h  Vector.H  Vector.h
src/Color/: Color.h  Color.pri  ColorManager.C  ColorManager.h  Light.C  Light.h
src/Dialogs/: ComplexDialog.ui  FunctionDialog.ui  PolarDialog.ui  ValuesDialogImpl.H
src/Displayable/: ComplexFunction.h  Composite.cpp  Composite.h  CustomFunction.C  CustomFunction.h  DefinitionRangeOfDimension.h  DefinitionSpaceRange.cpp  DefinitionSpaceRange.h  DepthCueUtil.cpp  DepthCueUtil.h  Displayable.cpp  Displayable.h  Displayable.pri  DisplayableClass.cpp  DisplayableClass.h  FunctionFactory.C  FunctionFactory.h  FunctionHolder.h  FunctionHolder.impl.h  FunctionParameter.h  FunctionParameterValue.C  FunctionParameterValue.h  FunctionParameterValueBase.h  FunctionValueGrid.h  GridDrawer.h  GridDrawer.impl.h  LoopHelper.h  MultithreadedTransformationPolicy.h  MultithreadedTransformationPolicy.impl.h  Object.C  Object.h  ParameterMap.C  ParameterMap.h  ParametricFunction.h  ParametricFunction.impl.h  Projection.h  RealFunction.C  RealFunction.h  RealFunctionImplementations.cpp  RealFunctionImplementations.h  (+25 more)
src/Documentation/: Hyperspace_Explorer_Help.html
src/Functions/: ComplexFunction.C  ComplexFunction.H  ComplexFunction.h  CustomFunction.C  CustomFunction.H  CustomFunction.h  DefinitionRangeOfDimension.h  DefinitionRangeOfDimension.impl.h  DefinitionSpaceRange.cpp  DefinitionSpaceRange.h  Displayable.cpp  Displayable.h  DisplayableClass.cpp  DisplayableClass.h  Extrude.H  Extrusion.H  Function.C  Function.H  Function.h  FunctionBase.C  FunctionFactory.C  FunctionFactory.H  FunctionFactory.h  FunctionHolder.h  FunctionHolder.impl.h  FunctionParameter.C  FunctionParameter.H  FunctionParameter.h  FunctionParameterFactory.h  FunctionParameterValue.C  FunctionParameterValue.h  FunctionParameterValueBase.h  FunctionValueGrid.h  Functions.pro  GridDrawer.h  GridDrawer.impl.h  LoopHelper.h  Object.C  Object.H  Object.h  (+37 more)
src/LSystems/: LSys_aux.C  LSystem  LSystem.C  LSystems.pro  Makefile  lsys.pov
src/Loki/: Functor.H  SingletonHolder.H  SingletonHolder.h
src/Script/: Parser.C  Parser.H  Parser.h  Script.pri  Statement.C  Statement.H  Statement.h
src/UI/: 4DMenu.C  4DView.C  4DView.H  4DView.h  AnimationDialog.qrc  AnimationDialog.ui  AnimationDialogImpl.C  AnimationDialogImpl.H  AnimationDialogImpl.h  ComplexDialog.ui  ComplexDialogImpl.C  ComplexDialogImpl.H  ComplexDialogImpl.h  CustomFunctionSlot.impl.H  CustomFunctionSlot.impl.h  FunctionDialog.ui  FunctionDialogImpl.C  FunctionDialogImpl.H  FunctionDialogImpl.h  GLObject.C  GLObject.H  Help.h  Menu4D.C  Menu4D.H  Menu4D.h  MenuHandler.C  MenuHandler.H  MouseHandler.C  MouseHandler.H  MouseHandler.h  ParameterInput.C  ParameterInput.H  ParameterInput.h  PluginCreator.C  PluginCreator.H  PluginCreator.h  PolarDialog.ui  PolarDialogImpl.C  PolarDialogImpl.H  PolarDialogImpl.h  (+29 more)
src/Utilities/: ChangeDir.C  ChangeDir.h  FunctionDLL.C  FunctionDLL.h  GLUPerspective.cpp  GLUPerspective.h  Globals.C  Globals.h  Log.h  Multithreading.h  MultithreadingPrivate.h  PathChange.C  PathChange.h  ScopedTimer.cpp  ScopedTimer.h  Tree.h  Tree.impl.h  Util.cpp  Util.h  Utilities.pri
src/VecMath/: ArrayList.h  ArrayList.impl.h  Matrix.H  Matrix.h  Matrix.impl.h  MultiDimensionalVector.h  MultiDimensionalVector.impl.h  NestedVector.H  NestedVector.h  Rotation.C  Rotation.H  Rotation.h  Rotation.impl.h  VecMath.pri  Vector.H  Vector.h  Vector.impl.h  uintvec.C  uintvec.H  uintvec.h
src/Windows/: 4D.clw  4D.cpp  4D.dsp  4D.dsw  4D.h  4D.plg  4D.rc  4D.tpr  4D.tws  4DDoc.cpp  4DDoc.h  4DView.cpp  4DView.h  Changelog.txt  ComplexFunction.cpp  ComplexFunction.h  Function.cpp  Function.h  GeneralException.cpp  GeneralException.h  MainFrm.cpp  MainFrm.h  Matrix.h  Object.cpp  Object.h  SpongeDlg.cpp  SpongeDlg.h  StdAfx.cpp  StdAfx.h  Surface.cpp  Surface.h  TO-DO.TXT  Vektor.cpp  (+3 more)
(+2329 files in other folders)
